--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <script src="https://kit.fontawesome.com/4d349a1f95.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -21,37 +23,54 @@
 
             <h2>My Profile</h2>
 
-            <img src="" alt="" id="prof-img">
+            <img src="Component 2.png" alt="" id="prof-img">
+
+            <div id="logo">
+                <img src="notification.png" alt="" id="bell">
+                <img src="profile-circle.png" alt="" id="user">
+                <!-- <i class="fa-regular fa-bell" id="bell"></i>
+                <i class="fa-regular fa-circle-user" id="user"></i> -->
+            </div>
 
         </div>
 
         <div id="profile2">
 
-            <h2>Update Your Profile Information Below</h2>
+            <h2>Update Your Profile Information Below.</h2>
+            <form action="" id="form">
 
-            <label for="fname">First name</label>
-            <input type="text" name="fname" value="Muhammadjamiu">
+                <label for="fname">First name</label>
+                <input type="text" name="fname" value="Muhammadjamiu" id="fname">
 
-            <label for="lname">last name</label>
-            <input type="text" name="lname" value="Abdulganiyu">
+                <label for="lname">last name</label>
+                <input type="text" name="lname" value="Abdulganiyu" id="lname">
 
-            <label for="Email">Email</label>
-            <input type="email" name="Email" value="Ganiujamiu03@gmail.com">
+                <label for="Email">Email</label>
+                <input type="email" name="Email" value="Ganiujamiu03@gmail.com" id="email">
 
-            <label for="Username">Username</label>
-            <input type="text" name="Username" value="Spider">
+                <label for="Username">Username</label>
+                <input type="text" name="Username" value="Spider" id="username">
 
-            <label for="Password">Password</label>
-            <input type="password" name="Password" value="larvish007">
+                <div id="box">
 
-            <label for="Change-password">Change Password</label>
-            <input type="password" name="Change-password" value="larvish007">
+                    <label for="Change-password">Change Password</label>
+                    <input type="password" name="Change-password" value="larvish007" id="password1">
+                    <i class="far fa-eye" id="tg1"></i>
 
-            <label for="Confirm-new-pass">Confirm New Password</label>
-            <input type="password" name="Confirm-new-pass" value="larvish007">
+                </div>
 
-            <button>Save Changes</button>
-            <button>Log Out</button>
+                <div id="box">
+
+                    <label for="Confirm-new-pass">Confirm New Password</label>
+                    <input type="password" name="Confirm-new-pass" value="larvish007" id="password2">
+                    <i class="far fa-eye" id="tg2" ></i>
+
+                </div>
+
+                <button id="btn1">Save Changes</button>
+                <button id="btn2">Log Out</button>
+
+            </form>
 
         </div>
 
