added some info

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             <form action="" id="form">
 
                 <label for="fname">First name</label>
-                <input type="text" name="fname" value="Muhammadjamiu" id="fname">
+                <input type="text" name="fname" value="John" id="fname">
 
                 <label for="lname">last name</label>
-                <input type="text" name="lname" value="Abdulganiyu" id="lname">
+                <input type="text" name="lname" value="Doe" id="lname">
 
                 <label for="Email">Email</label>
-                <input type="email" name="Email" value="Ganiujamiu03@gmail.com" id="email">
+                <input type="email" name="Email" value="john.doe@gmail.com" id="email">
 
                 <label for="Username">Username</label>
-                <input type="text" name="Username" value="Spider" id="username">
+                <input type="text" name="Username" value="John-Doe" id="username">
 
                 <div id="box">
 
