--- a/product_details.html
+++ b/product_details.html
@@ -3,78 +3,211 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="product_details.css">
     <title>Product Details</title>
 </head>
 <body>
-    <div>
-        <div><img src="#" alt="Product image">
+    <div class="ph-img-div">
+        <img class="ph-img" src="./pd-img/lenovo_thinkpad-removebg-preview 1.png" alt="Product image">
+    </div>
+        <div class="ph-name-div">
+            <h3 class="ph-name">Lenovo THINKPAD P1 GEN 3 WORKSTATION CI7 32GB RAM 512 SSD</h3>
         </div>
-        <div>
-            <h3>Lenovo 15.6" ThinkPad L15 Gen 3 Notebook (Thunder Black) 21C3004VUS</h3>
-        <div>
-            <div>
-                <p>581,830</p>
-            </div>
-            <div>
-                <a href="#">
-                    <button>Get the deal</button>
-                </a>
-            </div>
-            <div>
-                <button><img src="#" alt="konga">Konga</button>
-            </div>
-            <hr>
-            <div>
-                <p>Share to </p>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
-            </div>
-            <div>
-                <img src="#" alt="save">
-            </div>
+        <div id="main-price-div">
+            <p class="main_price"># 850,000</p>
         </div>
-        <div>
+        <div id="get-div">
+            <a href="#">
+                <button class="get-button">Get the deal</button>
+            </a>
+        </div>
+        <div id="konga-div">
+            <button class="konga-btn"><img src="#" alt="">Konga</button>
+        </div>
+        <div id="hr-l"></div>
+        <div id="social-div">
+            <p class="share">Share to </p>
+            </div>
+            <div id="social-img">
+                <a href="#"><img class="face" src="./pd-img/facebook.png" alt=""></a>
+                <a href="#"><img class="insta" src="./pd-img/instagram.jpg" alt=""></a>
+                <a href="#"><img class="twiter"src="./pd-img/twitter.png" alt=""></a>
+            </div>  
+        <div id="love-img">
+            <img src="./pd-img/heart.png" alt="love">
+        </div>     
+        <div id="save-img">
+            <img src="./pd-img/archive-tick.png" alt="save">
+        </div>
+        </div>
+        <div id="pro-d">
             <label for="menu">
-                <div>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <div>
-                    <button>Product Detais</button>
-                    <div>
-                        <a href="#">Specifications</a>
-                        <a href="#">Verified Customer Feedback</a>
+                <div class="dropd">
+                    <div class="handburger">
+                        <div id="hand">
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                        </div>
+                        <p class="ropbtn">Product Details</p>
+                    </div>
+                    <div class="dropdown-item">
+                        <a class="ad" href="#">Specifications</a>
+                        <a class="ad" href="#">Verified Customer Feedback</a>
                     </div>
                 </div>
             </label>
         </div>
-        <div>
-            <h4>Product Details</h4>
-            <p>Lenovo ThinkPad P1 Gen 3 20TH003DUS 15.6" Mobile Workstation - Full HD - 1920 x 1080 - Intel Core i7 10th Gen i7-10850H Hexa-core (6 Core) 2.70 GHz - 32 GB RAM - 512 GB SSD - Black - P Series Mobile Workstations
+        <div id="pro-d2">
+            <div class="pro">
+                <h4 class="pro-text">Product Details</h4>
+            </div>
+            <p class="pro-de">Lenovo ThinkPad P1 Gen 3 20TH003DUS 15.6" Mobile Workstation - Full HD - 1920 x 1080 - Intel Core i7 10th Gen i7-10850H Hexa-core (6 Core) 2.70 GHz - 32 GB RAM - 512 GB SSD - Black - P Series Mobile Workstations
                 These systems feature lightning-fast graphics and processing, and the latest cutting-edge technology to handle your compute-intensive needs-in surprisingly light packages.Intel Core i7 2.70 GHz processor provides lightning fast speed and peak performance for the toughest of tasks and games</p>
         </div>
-        <div>
-            <h4>Consider a similar item</h4>
+        <div id="c-div">
+            <h4 class="c-h4">Consider a similar item</h4>
             <div>
-                <img src="#" alt="similar item 1">
-                <p>Lenovo Thinkpad T480s Core i5 8350U 24GB...</p>
-                <p>#920,200</p>
+                <img class="si-1" src="./pd-img/lenovo_small-removebg-preview 1.png" alt="similar item 1">
+                <p class="si-p1">Lenovo Thinkpad T480s Core i5 8350U 24GB...</p>
+                <p class="si-n1">#920,200</p>
             </div>
             <div>
-                <img src="#" alt="similar item 1">
-                <p>Lenovo Thinkpad T490 -Core i5-10210U -1.60GHZ  -8GB...</p>
-                <p>#780,000</p>
+                <img class="si-2" src="./pd-img/lenovo_small_1-removebg-preview 1.png" alt="similar item 2">
+                <p class="si-p2">Lenovo Thinkpad T490 -Core i5-10210U -1.60GHZ  -8GB...</p>
+                <p class="si-n2">#780,000</p>
             </div>
             <div>
-                <img src="#" alt="similar item 1">
-                <p>Lenovo ThinkPad Core i5-10210U ,16GB RAM....</p>
-                <p>#700,000</p>
+                <img class="si-3" src="#" alt="similar item 3">
+                <p class="si-p3">Lenovo ThinkPad Core i5-10210U ,16GB RAM....</p>
+                <p class="si-n3">#700,000</p>
             </div>
         </div>
     </div>
+    <div id="spe-div">
+        <div class="spe-div-sm">
+            <h4 class="spe">Specifications</h4>
+        </div>
+        <div class="d-ul">
+            <ul class="d-li"><li>Intel Core i7 2.70 GHz processor provides lightning fast speed and peak performance for the toughest of tasks and games</li>
+            <li>Memory storage capacity: 4.0</li>
+            <li>Operating system: Windows 1</li>
+            <li> Package Weight: 4.05 kilograms</li></ul>
+        </div>
     </div>
+    <div id="fe-div">
+        <div class="ve-div">
+            <h4 class="ve-h4">Verified Customer Feedback</h4>
+        </div>
+        <div class="ra-div">
+            <div class="main-ra-div">
+                <p class="main-ra">4.5</p>
+            </div>
+            <div class="ra-img-ma">
+                <img class="img-ma-1" src="./pd-img/star.png" alt="">
+                <img class="img-ma-2" src="./pd-img/star.png" alt="">
+                <img class="img-ma-3" src="./pd-img/star.png" alt="">
+                <img class="img-ma-4" src="./pd-img/star.png" alt="">
+                <img class="img-ma-5" src="./pd-img/ri-star-half-fill.png" alt="">
+            </div>
+            <div>
+                <p class="to-r">20,063</p>
+            </div>      
+            <div class="forw">
+                <a href="#"><img src="./pd-img/arrow-right.png" alt=""></a>
+            </div>
+        </div>        
+            <div>
+                <div class="to-5">
+                5
+                </div>
+                <div class="to-4">
+                4
+                </div>
+                <div class="to-3">
+                3
+                </div>
+                <div class="to-2">
+                2
+                </div>
+                <div class="to-1">
+                1
+                </div>
+            </div>
+            <div class="sp-div">
+                <div class="sp-5-div">
+                    <span class="sp-5"></span>
+                </div>
+                <div class="sp-4-div">
+                    <span class="sp-4"></span>
+                </div>
+                <div class="sp-3-div">
+                    <span class="sp-3"></span>
+                </div>
+                <div class="sp-2-div">
+                    <span class="sp-2"></span>
+                </div>
+                <div class="sp-1-div">
+                    <span class="sp-1"></span>
+                </div>
+            </div>
+            </div>
+            <div class="rio-div">
+                <div class="D-div">
+                    <p class="D">D</p>
+                </div>
+                <div class="DR">
+                    <p class="DR-text">David Rio</p>
+                </div>
+                <div>
+                    <div class="star">
+                        <img class="img-1" src="./pd-img/star.png" alt="">
+                        <img class="img-2" src="./pd-img/star.png" alt="">
+                        <img class="img-3" src="./pd-img/star.png" alt="">
+                        <img class="img-4" src="./pd-img/star.png" alt="">
+                        <img class="img-5" src="./pd-img/star.svg" alt="">
+                    </div>
+                    <div class="date-ra">
+                        <p>17/07/2020</p>
+                    </div>
+                </div>
+                <div class="ra-text">
+                    <p>It could probably be a factory error but mine didn’t come with a manual, that said the life span of the device is integring, 3 years and counting ...</p>
+                </div>
+            </div>
+    </div>
+    <div id="de-div">
+        <div><h5 class="de">Disclaimer</h5></div>
+        <div><p class="de-d">Prices are provided by the merchants. We assume no responsibility for accuracy of price information provided by merchants. Please alert us to any pricing discrepancies and we will alert the merchant. Sales taxes are estimated at the zip code level. Shipping costs are estimates. Please check store for exact shipping costs.Product specifications are obtained from third parties, and while we make every effort to assure the accuracy of product information, we do not assume any liability for inaccuracies. Store ratings and product reviews are written and submitted by online shoppers to assist you as you shop. They do not reflect our opinions. We take no responsibility for the content of ratings and reviews submitted by users.</p></div>
+    </div>
+    <footer>
+        <div id="main-footer">
+            <div class="main-footer">
+                <div class=""><img src="./pd-img/footer-logo.svg" alt="footer logo"></div>
+                <div class="footer-item">
+                    <h5>Company</h5>
+                    <a href="">About Us</a>
+                    <a href="">Contact Us</a>
+                    <a href="">Help & Support</a>
+                    <a href="">FAQ</a>
+                </div>
+                <div class="footer-item">
+                    <h5>Community</h5>
+                    <a href="">Join Our Facebook Community</a>
+                    <a href="">Join our Affiliate Program</a>
+                    <a href="">Follow Us On Twitter</a>
+                </div>
+                <div class="footer-item">
+                    <h5>Terms & Policies</h5>
+                    <a href="">Privacy Notice</a>
+                    <a href="">Terms of Service</a>
+                    <a href="">Usage Guidlines</a>
+                </div>
+            </div>
+        </div>        
+        <div class="copyright"><p>Copyright 2022: Zuri Team 23</p></div>
+    </footer>
+
 </body>
 </html>
