--- a/login.html
+++ b/login.html
@@ -23,8 +23,7 @@
                 <div>
                     <label for="password">Password</label><br>
                     <input type="password" placeholder="***************" name="password" autocomplete="current-password" required="" id="password" class="field">
-                    <div class="text"><input type="radio" class="radio"><p>&nbsp;&nbsp;Remember me <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Forgot password?</span></p></div>
+                    <div class="text"><input type="radio" class="radio"><p>&nbsp;&nbsp;Remember me <span>Forgot password?</span></p></div>
                 </div><br>
                 <div class="btn">
                     <button type="submit" class="loginbtn">Log in</button>
