--- a/signUp.html
+++ b/signUp.html
@@ -33,7 +33,7 @@
                 <div>
                     <label for="password">Password</label> <br>
                     <input type="password" placeholder="minimum of 8 characters" name="password" autocomplete="current-password" required="" id="password" class="field">
-                    <div class="text"><input type="radio" class="radio"><p>&nbsp;&nbsp;I agree to the <span>User Agreement</span> and <span>Privacy Policy</span></p></div>
+                    <div class="sign"><input type="radio" class="radio"><p>&nbsp;&nbsp;I agree to the <span>User Agreement</span> and <span>Privacy Policy</span></p></div>
                 </div><br>
                 <div>
                     <button type="submit" class="signupbtn">Sign up</button>
