Mobile FAQ Done

--- a/faq.html
+++ b/faq.html
@@ -11,15 +11,17 @@
 <body>
     <main id="faq-main">
         <section class="faq-header">
-            <h3>FAQ</h3>
-            <img src="img/faq-head.png" alt="faq header image">
-            <h6>Here are some of the ShopMore frequently asked questions.</h6>
+            <div class="faq-header-wrapper">
+                <h3>FAQ</h3>
+                <img src="img/faq-head.png" alt="faq header image">
+                <h6>Here are some of the ShopMore frequently asked questions.</h6>
+            </div>
         </section>
 
         <section class="faq-qna">
             <div class="faq-wrapper">
-                <div><img src="img/message-question.svg" alt=""></div>
-                <div>
+                <div class="faq-img"><img src="img/message-question.svg" alt=""></div>
+                <div class="faq-questions">
                     <h5>Q: Is Your Website Secure?</h5>
                     <p>A: Our website is secured with SSL certificate. This means
                         that the information you input is encrypted and will not
@@ -39,8 +41,8 @@
             </div>
 
             <div class="faq-wrapper">
-                <div><img src="img/message-question.svg" alt=""></div>
-                <div>
+                <div class="faq-img"><img src="img/message-question.svg" alt=""></div>
+                <div class="faq-questions">
                     <h5>Q: How to contact customer service?</h5>
                     <p>A: If you have questions regarrding our online 
                         store (account questions, technical questions) please 
@@ -49,8 +51,8 @@
             </div>
 
             <div class="faq-wrapper">
-                <div><img src="img/message-question.svg" alt=""></div>
-                <div>
+                <div class="faq-img"><img src="img/message-question.svg" alt=""></div>
+                <div class="faq-questions">
                     <h5>Q: Do you have the product in stock?</h5>
                     <p>A: All products shown on our site are available. Pending 
                         the time of your order is dependent on the products 
@@ -59,8 +61,8 @@
             </div>
 
             <div class="faq-wrapper">
-                <div><img src="img/message-question.svg" alt=""></div>
-                <div>
+                <div class="faq-img"><img src="img/message-question.svg" alt=""></div>
+                <div class="faq-questions">
                     <h5>Q: How can I order?</h5>
                     <p>A: You can order easily using our 
                         online platform. When you find a product you need,
@@ -70,8 +72,8 @@
             </div>
 
             <div class="faq-wrapper">
-                <div><img src="img/message-question.svg" alt=""></div>
-                <div>
+                <div class="faq-img"><img src="img/message-question.svg" alt=""></div>
+                <div class="faq-questions">
                     <h5>Q: Are the brands authentic?</h5>
                     <p>A: Our brands are authentic and sourced from trust-worthy 
                         sites. If you are buying from websites that you are not
@@ -80,8 +82,8 @@
             </div>
 
             <div class="faq-wrapper">
-                <div><img src="img/message-question.svg" alt=""></div>
-                <div>
+                <div class="faq-img"><img src="img/message-question.svg" alt=""></div>
+                <div class="faq-questions">
                     <h5>Q: How do I change my personal details?</h5>
                     <p>A: You can easily change all your information 
                         on your account. When you login to ShopMore, go 
@@ -91,8 +93,8 @@
             </div>
 
             <div class="faq-wrapper">
-                <div><img src="img/message-question.svg" alt=""></div>
-                <div>
+                <div class="faq-img"><img src="img/message-question.svg" alt=""></div>
+                <div class="faq-questions">
                     <h5>Q: How can I save when shopping?</h5>
                     <p>A: One of the benefits of shopping online is that 
                         you are able to find products at lower prices due 
