Homepage Tablet View

--- a/index.html
+++ b/index.html
@@ -188,21 +188,21 @@
 
     <footer id="main-footer">
         <div class="main-footer">
-            <div class=""><img src="img/footer-logo.svg" alt="footer logo"></div>
-            <div class="footer-item">
+            <div class="foot-item"><img src="img/footer-logo.svg" alt="footer logo"></div>
+            <div class="footer-item foot-item">
                 <h5>Company</h5>
                 <a href="">About Us</a>
                 <a href="">Contact Us</a>
                 <a href="">Help & Support</a>
                 <a href="">FAQ</a>
             </div>
-            <div class="footer-item">
+            <div class="footer-item foot-item">
                 <h5>Community</h5>
                 <a href="">Join Our Facebook Community</a>
                 <a href="">Join our Affiliate Program</a>
                 <a href="">Follow Us On Twitter</a>
             </div>
-            <div class="footer-item">
+            <div class="footer-item foot-item">
                 <h5>Terms & Policies</h5>
                 <a href="">Privacy Notice</a>
                 <a href="">Terms of Service</a>
