--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,23 @@
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
 </head>
 <body>
+    <header id="main-header">
+        <div class="img-search">
+            <img src="img/logo.svg" alt="shopmore logo">
+            <input type="text" placeholder="Search">
+        </div>
+        <nav>
+            <a href="" class="active">Home</a>
+            <a href="" class="inactive">Product</a>
+            <a href="" class="inactive">About</a>
+            <a href="" class="inactive">Contact</a>
+            <a href="" class="inactive">FAQ</a>
+            <span>|</span>
+            <a href="" class="header-status">Sign In</a>
+            <a href="" class="header-status header-myaccount">My Account</a>
+        </nav>
+    </header>
+
     <main id="faq-main">
         <section class="faq-header">
             <div class="faq-header-wrapper">
@@ -110,5 +127,31 @@
                 you can always <span>Contact Us</span>. We will attend to you shortly!</p>
         </section>
     </main>
+
+    <footer id="main-footer">
+        <div class="main-footer">
+            <div class=""><img src="img/footer-logo.svg" alt="footer logo"></div>
+            <div class="footer-item">
+                <h5>Company</h5>
+                <a href="">About Us</a>
+                <a href="">Contact Us</a>
+                <a href="">Help & Support</a>
+                <a href="">FAQ</a>
+            </div>
+            <div class="footer-item">
+                <h5>Community</h5>
+                <a href="">Join Our Facebook Community</a>
+                <a href="">Join our Affiliate Program</a>
+                <a href="">Follow Us On Twitter</a>
+            </div>
+            <div class="footer-item">
+                <h5>Terms & Policies</h5>
+                <a href="">Privacy Notice</a>
+                <a href="">Terms of Service</a>
+                <a href="">Usage Guidlines</a>
+            </div>
+        </div>
+        <div class="copyright"><p>Copyright 2022: Zuri Team 23</p></div>
+    </footer>
 </body>
 </html>
