--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,19 @@
 
                 <img src="contact-images/Component 2.png" id="main-img">
 
+                <div class="border">
                 <div style="margin-bottom: 1em;"><img src="contact-images/Vector-phone.png" alt="" class="icon"><span >+234 808 889 9909</span></div>
 
                 <div><img src="contact-images/Vector-sms.png" alt="" class="icon"><span>info@shopmore.com</span></div>
 
-                <div>
+                </div>
+
+                <div class="border">
                     <p>Lagos</p>
                     <img src="contact-images/Vector-location.png" alt="" class="icon"><span>Block 135, Lekki Phase 7, Eti Osa</span>
                 </div>
 
-                <div>
+                <div class="border">
                     <p>Abuja</p>
                     <img src="contact-images/Vector-location.png" alt="" class="icon"><span>Block 135, Aminu Kanu Crescent, Wuse.</span>
                 </div>
