--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/4d349a1f95.js" crossorigin="anonymous"></script>
 </head>
 <body>
+        
 
     <nav>
 
@@ -28,11 +29,10 @@
             <div id="logo">
                 <img src="notification.png" alt="" id="bell">
                 <img src="profile-circle.png" alt="" id="user">
-                <!-- <i class="fa-regular fa-bell" id="bell"></i>
-                <i class="fa-regular fa-circle-user" id="user"></i> -->
             </div>
 
         </div>
+
 
         <div id="profile2">
 
@@ -40,34 +40,40 @@
             <form action="" id="form">
 
                 <label for="fname">First name</label>
-                <input type="text" name="fname" value="John" id="fname">
+                <input type="text" name="fname" placeholder="John" id="fname" onkeydown="log1()">
+                <span id="sp1"></span><br>
 
                 <label for="lname">last name</label>
-                <input type="text" name="lname" value="Doe" id="lname">
+                <input type="text" name="lname" placeholder="Doe" id="lname" onkeydown="log2()">
+                <span id="sp2"></span><br>
 
                 <label for="Email">Email</label>
-                <input type="email" name="Email" value="john.doe@gmail.com" id="email">
+                <input type="email" name="Email" placeholder="john.doe@gmail.com" id="email" onkeydown="log3()">
+                <span id="sp3"></span><br>
 
                 <label for="Username">Username</label>
-                <input type="text" name="Username" value="John-Doe" id="username">
+                <input type="text" name="Username" placeholder="John_Doe" id="username" onkeydown="log4()">
+                <span id="sp4"></span><br>
 
                 <div id="box">
 
                     <label for="Change-password">Change Password</label>
-                    <input type="password" name="Change-password" value="larvish007" id="password1">
+                    <input type="password" name="Change-password" placeholder="************" id="password1" onkeydown="log6()">
                     <i class="far fa-eye" id="tg1"></i>
+                    <span id="sp6"></span><br>
 
                 </div>
 
                 <div id="box">
 
                     <label for="Confirm-new-pass">Confirm New Password</label>
-                    <input type="password" name="Confirm-new-pass" value="larvish007" id="password2">
+                    <input type="password" name="Confirm-new-pass" placeholder="************" id="password2" onkeydown="log5()">
                     <i class="far fa-eye" id="tg2" ></i>
+                    <span id="sp5"></span><br>
 
                 </div>
 
-                <button id="btn1">Save Changes</button>
+                <button id="btn1" >Save Changes</button>
                 <button id="btn2">Log Out</button>
 
             </form>
