--- a/product_details.html
+++ b/product_details.html
@@ -3,10 +3,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <link rel="stylesheet" href="product_details.css">
+    <link rel="shortcut icon" href="./pd-img/favicon.svg" type="image/x-icon">
     <title>Product Details</title>
 </head>
 <body>
+    <header id="main-header">
+        <div class="img-search">
+            <img src="./pd-img/logo.svg" alt="shopmore logo">
+            <input type="text" placeholder="Search">
+        </div>
+        <nav>
+            <a href="" class="active">Home</a>
+            <a href="" class="inactive">Product</a>
+            <a href="" class="inactive">About</a>
+            <a href="" class="inactive">Contact</a>
+            <a href="" class="inactive">FAQ</a>
+            <span>|</span>
+            <a href="" class="header-status">Sign In</a>
+            <a href="" class="header-status header-myaccount">My Account</a>
+        </nav>
+    </header>
+    <div id="extension">
+        <p><a href="">home  </a>  ><a href="">    product list  </a>><a href="">    product details </a></p>
+    </div>
     <div class="ph-img-div">
         <img class="ph-img" src="./pd-img/lenovo_thinkpad-removebg-preview 1.png" alt="Product image">
     </div>
@@ -22,7 +45,7 @@
             </a>
         </div>
         <div id="konga-div">
-            <button class="konga-btn"><img src="#" alt="">Konga</button>
+            <button class="konga-btn"><img class="kon" src="./pd-img/shopping-cart.svg" alt="">Konga</button>
         </div>
         <div id="hr-l"></div>
         <div id="social-div">
@@ -53,18 +76,34 @@
                         <p class="ropbtn">Product Details</p>
                     </div>
                     <div class="dropdown-item">
-                        <a class="ad" href="#">Specifications</a>
-                        <a class="ad" href="#">Verified Customer Feedback</a>
+                        <a class="ad" onclick="specifi()" href="#speci">Specifications</a>
+                        <a class="ad" onclick="verif()" href="#veri">Verified Customer Feedback</a>
                     </div>
                 </div>
             </label>
         </div>
-        <div id="pro-d2">
-            <div class="pro">
-                <h4 class="pro-text">Product Details</h4>
-            </div>
-            <p class="pro-de">Lenovo ThinkPad P1 Gen 3 20TH003DUS 15.6" Mobile Workstation - Full HD - 1920 x 1080 - Intel Core i7 10th Gen i7-10850H Hexa-core (6 Core) 2.70 GHz - 32 GB RAM - 512 GB SSD - Black - P Series Mobile Workstations
-                These systems feature lightning-fast graphics and processing, and the latest cutting-edge technology to handle your compute-intensive needs-in surprisingly light packages.Intel Core i7 2.70 GHz processor provides lightning fast speed and peak performance for the toughest of tasks and games</p>
+        <div id="pro-dmo">
+            <label for="menu">
+                <div class="dropd">
+                    <div class="handburger">
+                        <div id="hand">
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                        </div>
+                        <p class="ropbtn">Product Informations</p>
+                    </div>
+                    <div class="dropdown-item">
+                        <a class="ad" onclick="produ()" href="#prod">Product Details</a>
+                        <a class="ad" onclick="specifimo()" href="#prod">Specifications</a>
+                        <a class="ad" onclick="verifmo()" href="#prod">Verified Customer Feedback</a>
+                    </div>
+                </div>
+            </label>
+        </div>
+        <div id="prod">
+            
         </div>
         <div id="c-div">
             <h4 class="c-h4">Consider a similar item</h4>
@@ -79,103 +118,17 @@
                 <p class="si-n2">#780,000</p>
             </div>
             <div>
-                <img class="si-3" src="#" alt="similar item 3">
+                <img class="si-3" src="./pd-img/lenovo_thinkpad_3rd-removebg-preview 1.png" alt="similar item 3">
                 <p class="si-p3">Lenovo ThinkPad Core i5-10210U ,16GB RAM....</p>
                 <p class="si-n3">#700,000</p>
             </div>
         </div>
     </div>
-    <div id="spe-div">
-        <div class="spe-div-sm">
-            <h4 class="spe">Specifications</h4>
-        </div>
-        <div class="d-ul">
-            <ul class="d-li"><li>Intel Core i7 2.70 GHz processor provides lightning fast speed and peak performance for the toughest of tasks and games</li>
-            <li>Memory storage capacity: 4.0</li>
-            <li>Operating system: Windows 1</li>
-            <li> Package Weight: 4.05 kilograms</li></ul>
-        </div>
+    <div id="speci">
+
     </div>
-    <div id="fe-div">
-        <div class="ve-div">
-            <h4 class="ve-h4">Verified Customer Feedback</h4>
-        </div>
-        <div class="ra-div">
-            <div class="main-ra-div">
-                <p class="main-ra">4.5</p>
-            </div>
-            <div class="ra-img-ma">
-                <img class="img-ma-1" src="./pd-img/star.png" alt="">
-                <img class="img-ma-2" src="./pd-img/star.png" alt="">
-                <img class="img-ma-3" src="./pd-img/star.png" alt="">
-                <img class="img-ma-4" src="./pd-img/star.png" alt="">
-                <img class="img-ma-5" src="./pd-img/ri-star-half-fill.png" alt="">
-            </div>
-            <div>
-                <p class="to-r">20,063</p>
-            </div>      
-            <div class="forw">
-                <a href="#"><img src="./pd-img/arrow-right.png" alt=""></a>
-            </div>
-        </div>        
-            <div>
-                <div class="to-5">
-                5
-                </div>
-                <div class="to-4">
-                4
-                </div>
-                <div class="to-3">
-                3
-                </div>
-                <div class="to-2">
-                2
-                </div>
-                <div class="to-1">
-                1
-                </div>
-            </div>
-            <div class="sp-div">
-                <div class="sp-5-div">
-                    <span class="sp-5"></span>
-                </div>
-                <div class="sp-4-div">
-                    <span class="sp-4"></span>
-                </div>
-                <div class="sp-3-div">
-                    <span class="sp-3"></span>
-                </div>
-                <div class="sp-2-div">
-                    <span class="sp-2"></span>
-                </div>
-                <div class="sp-1-div">
-                    <span class="sp-1"></span>
-                </div>
-            </div>
-            </div>
-            <div class="rio-div">
-                <div class="D-div">
-                    <p class="D">D</p>
-                </div>
-                <div class="DR">
-                    <p class="DR-text">David Rio</p>
-                </div>
-                <div>
-                    <div class="star">
-                        <img class="img-1" src="./pd-img/star.png" alt="">
-                        <img class="img-2" src="./pd-img/star.png" alt="">
-                        <img class="img-3" src="./pd-img/star.png" alt="">
-                        <img class="img-4" src="./pd-img/star.png" alt="">
-                        <img class="img-5" src="./pd-img/star.svg" alt="">
-                    </div>
-                    <div class="date-ra">
-                        <p>17/07/2020</p>
-                    </div>
-                </div>
-                <div class="ra-text">
-                    <p>It could probably be a factory error but mine didn’t come with a manual, that said the life span of the device is integring, 3 years and counting ...</p>
-                </div>
-            </div>
+    <div id="veri">
+
     </div>
     <div id="de-div">
         <div><h5 class="de">Disclaimer</h5></div>
@@ -184,7 +137,7 @@
     <footer>
         <div id="main-footer">
             <div class="main-footer">
-                <div class=""><img src="./pd-img/footer-logo.svg" alt="footer logo"></div>
+                <div class="footer-logo"><img src="./pd-img/footer-logo.svg" alt="footer logo"></div>
                 <div class="footer-item">
                     <h5>Company</h5>
                     <a href="">About Us</a>
@@ -208,6 +161,6 @@
         </div>        
         <div class="copyright"><p>Copyright 2022: Zuri Team 23</p></div>
     </footer>
-
+    <script type="text/babel" src="./product_details.js"></script>
 </body>
 </html>
