--- a/product_details.html
+++ b/product_details.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,8 +18,8 @@
             <input type="text" placeholder="Search">
         </div>
         <nav>
-            <a href="" class="active">Home</a>
-            <a href="" class="inactive">Product</a>
+            <a href="" class="inactive">Home</a>
+            <a href="" class="active">Product</a>
             <a href="" class="inactive">About</a>
             <a href="" class="inactive">Contact</a>
             <a href="" class="inactive">FAQ</a>
@@ -27,8 +28,30 @@
             <a href="" class="header-status header-myaccount">My Account</a>
         </nav>
     </header>
+    <div id="header-mobile">
+        <label for="menu">
+            <div class="dropd-mobile">
+                <div class="handbur">
+                    <div id="hand-mobile">
+                        <span class="bars"></span>
+                        <span class="bars"></span>
+                        <span class="bars"></span>
+                        <span class="bars"></span>
+                    </div>
+                    <input class="search" type="text" placeholder="Search">
+                </div>
+                <div class="dropdown-item-mo">
+                    <a class="ad-mobile" href="">Home</a>
+                    <a class="ad-mobile" href="">Product</a>
+                    <a class="ad-mobile" href="">About</a>
+                    <a class="ad-mobile" href="">Contact</a>
+                    <a class="ad-mobile" href="">FAQ</a>
+                </div>
+            </div>
+        </label>
+    </div>
     <div id="extension">
-        <p><a href="">home  </a>  ><a href="">    product list  </a>><a href="">    product details </a></p>
+        <p><a href="">Home  </a>  ><a href="">    Products  </a>><a href="">   Lenovo Thinkpad  </a></p>
     </div>
     <div class="ph-img-div">
         <img class="ph-img" src="./pd-img/lenovo_thinkpad-removebg-preview 1.png" alt="Product image">
@@ -55,7 +78,10 @@
                 <a href="#"><img class="face" src="./pd-img/facebook.png" alt=""></a>
                 <a href="#"><img class="insta" src="./pd-img/instagram.jpg" alt=""></a>
                 <a href="#"><img class="twiter"src="./pd-img/twitter.png" alt=""></a>
-            </div>  
+            </div>
+            <div id="comment-img">
+                <img src="./pd-img/message.png" alt="save">
+            </div>
         <div id="love-img">
             <img src="./pd-img/heart.png" alt="love">
         </div>     
@@ -135,8 +161,8 @@
         <div><p class="de-d">Prices are provided by the merchants. We assume no responsibility for accuracy of price information provided by merchants. Please alert us to any pricing discrepancies and we will alert the merchant. Sales taxes are estimated at the zip code level. Shipping costs are estimates. Please check store for exact shipping costs.Product specifications are obtained from third parties, and while we make every effort to assure the accuracy of product information, we do not assume any liability for inaccuracies. Store ratings and product reviews are written and submitted by online shoppers to assist you as you shop. They do not reflect our opinions. We take no responsibility for the content of ratings and reviews submitted by users.</p></div>
     </div>
     <footer>
-        <div id="main-footer">
-            <div class="main-footer">
+        <div class="main-footer">
+            <div class="sub-footer">
                 <div class="footer-logo"><img src="./pd-img/footer-logo.svg" alt="footer logo"></div>
                 <div class="footer-item">
                     <h5>Company</h5>
