--- a/index.html
+++ b/index.html
@@ -11,25 +11,46 @@
 <body>
     <header id="main-header">
         <div class="img-search">
-            <img src="img/logo.svg" alt="shopmore logo">
+            <img src="img/favicon.svg" alt="mobile logo" class="shopmore-mobile-logo">
+            <img src="img/logo.svg" alt="shopmore logo" class="shopmore-logo">
             <input type="text" placeholder="Search">
         </div>
         <nav>
-            <a href="" class="active">Home</a>
-            <a href="" class="inactive">Product</a>
-            <a href="" class="inactive">About</a>
-            <a href="" class="inactive">Contact</a>
-            <a href="" class="inactive">FAQ</a>
-            <span>|</span>
-            <a href="" class="header-status">Sign In</a>
-            <a href="" class="header-status header-myaccount">My Account</a>
+            <a href="javascript:void(0);" class="hamburger">
+                <div class="line line-one"></div>
+                <div class="line line-two"></div>
+                <div class="line line-three"></div>
+            </a>
+
+            <div class="menu">
+                <a href="" class="active">Home</a>
+                <a href="" class="inactive">Product</a>
+                <a href="" class="inactive">About</a>
+                <a href="" class="inactive">Contact</a>
+                <a href="" class="inactive">FAQ</a>
+                <span>|</span>
+                <a href="" class="header-status">Sign In</a>
+                <a href="" class="header-status header-myaccount">My Account</a>
+
+                <hr>
+                <div class="mobile-only">
+                    <div class="mobile-icons">
+                        <a href="">Settings</a>
+                        <img src="img/setting.svg" alt="">
+                    </div>
+                    <div class="mobile-icons">
+                        <a href="">Name</a>
+                        <img src="img/user.svg" alt="">
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     
     <main id="landing-main">
         <section class="hero">
             <div class="hero-text-btn">
-                <h1>Shop Smarter Save More</h1>
+                <h1>Shop Smarter<br> Save More</h1>
                 <p>Shop smarter by make uses of the best prices
                     by comparing multiple platform offers and 
                     increase your savings.</p>
@@ -211,5 +232,7 @@
         </div>
         <div class="copyright"><p>Copyright 2022: Zuri Team 23</p></div>
     </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
