--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
 
     <footer id="main-footer">
         <div class="main-footer">
-            <div class="foot-item"><img src="img/footer-logo.svg" alt="footer logo"></div>
+            <div class="foot-item footer-main-logo"><img src="img/footer-logo.svg" alt="footer logo"></div>
+            <div class="foot-item footer-mobile"><img src="img/logo.svg" alt="footer logo"></div>
             <div class="footer-item foot-item">
                 <h5>Company</h5>
                 <a href="">About Us</a>
