--- a/faq.html
+++ b/faq.html
@@ -11,18 +11,39 @@
 <body>
     <header id="main-header">
         <div class="img-search">
-            <img src="img/logo.svg" alt="shopmore logo">
+            <img src="img/favicon.svg" alt="mobile logo" class="shopmore-mobile-logo">
+            <img src="img/logo.svg" alt="shopmore logo" class="shopmore-logo">
             <input type="text" placeholder="Search">
         </div>
         <nav>
-            <a href="" class="active">Home</a>
-            <a href="" class="inactive">Product</a>
-            <a href="" class="inactive">About</a>
-            <a href="" class="inactive">Contact</a>
-            <a href="" class="inactive">FAQ</a>
-            <span>|</span>
-            <a href="" class="header-status">Sign In</a>
-            <a href="" class="header-status header-myaccount">My Account</a>
+            <a href="javascript:void(0);" class="hamburger">
+                <div class="line line-one"></div>
+                <div class="line line-two"></div>
+                <div class="line line-three"></div>
+            </a>
+
+            <div class="menu">
+                <a href="" class="active">Home</a>
+                <a href="" class="inactive">Product</a>
+                <a href="" class="inactive">About</a>
+                <a href="" class="inactive">Contact</a>
+                <a href="" class="inactive">FAQ</a>
+                <span>|</span>
+                <a href="" class="header-status">Sign In</a>
+                <a href="" class="header-status header-myaccount">My Account</a>
+
+                <hr>
+                <div class="mobile-only">
+                    <div class="mobile-icons">
+                        <a href="">Settings</a>
+                        <img src="img/setting.svg" alt="">
+                    </div>
+                    <div class="mobile-icons">
+                        <a href="">Name</a>
+                        <img src="img/user.svg" alt="">
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -61,7 +82,7 @@
                 <div class="faq-img"><img src="img/message-question.svg" alt=""></div>
                 <div class="faq-questions">
                     <h5>Q: How to contact customer service?</h5>
-                    <p>A: If you have questions regarrding our online 
+                    <p>A: If you have questions regarding our online 
                         store (account questions, technical questions) please 
                         contact support@shopmore.com or call +234 464 8128.</p>
                 </div>
@@ -130,21 +151,22 @@
 
     <footer id="main-footer">
         <div class="main-footer">
-            <div class=""><img src="img/footer-logo.svg" alt="footer logo"></div>
-            <div class="footer-item">
+            <div class="foot-item footer-main-logo"><img src="img/footer-logo.svg" alt="footer logo"></div>
+            <div class="foot-item footer-mobile"><img src="img/logo.svg" alt="footer logo"></div>
+            <div class="footer-item foot-item">
                 <h5>Company</h5>
                 <a href="">About Us</a>
                 <a href="">Contact Us</a>
                 <a href="">Help & Support</a>
                 <a href="">FAQ</a>
             </div>
-            <div class="footer-item">
+            <div class="footer-item foot-item">
                 <h5>Community</h5>
                 <a href="">Join Our Facebook Community</a>
                 <a href="">Join our Affiliate Program</a>
                 <a href="">Follow Us On Twitter</a>
             </div>
-            <div class="footer-item">
+            <div class="footer-item foot-item">
                 <h5>Terms & Policies</h5>
                 <a href="">Privacy Notice</a>
                 <a href="">Terms of Service</a>
@@ -153,5 +175,7 @@
         </div>
         <div class="copyright"><p>Copyright 2022: Zuri Team 23</p></div>
     </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
