--- a/Product-details/product-details.html
+++ b/Product-details/product-details.html
@@ -26,31 +26,43 @@
             </a>
 
             <div class="menu">
-                <a href="" class="active">Home</a>
+                <a href="" class="inactive">Home</a>
                 <a href="" class="inactive">Product</a>
                 <a href="" class="inactive">About</a>
                 <a href="" class="inactive">Contact</a>
                 <a href="" class="inactive">FAQ</a>
                 <span>|</span>
                 <a href="" class="header-status">Sign In</a>
-                <a href="" class="header-status header-myaccount">My Account</a>
+               <div class="header-myaccount">
+                <a href="" class="">Adam</a>
+                <img src="./product-img/user.png" alt="">
+               </div>
 
                 <hr>
                 <div class="mobile-only">
                     <div class="mobile-icons">
                         <a href="">Settings</a>
-                        <img src="img/setting.svg" alt="">
+                        <img src="./product-img/setting.svg" alt="">
                     </div>
                     <div class="mobile-icons">
                         <a href="">Name</a>
-                        <img src="img/user.svg" alt="">
+                        <img src="./product-img/user.svg" alt="">
                     </div>
                 </div>
             </div>
         </nav>
+
     </header>
     
     <main>
+        <section>
+            <div id="input-mo">
+                <form id="form" role="search" aria-label="Search Site" class="header-form">
+                    <input type="search" placeholder="Search">
+                    <button><svg viewBox="0 0 1024 1024"><path class="path1" d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z"></path></svg></button>
+                </form>
+            </div>
+        </section>
 
         <section>
             <div id="sec-1-div">
@@ -130,25 +142,25 @@
                     <div id="sec3-2-div">
                         <div id="sec3-3-div">
                             <div>
-                                <P class="ph-name">Jumia</P>
+                                <P class="ph-name sub-name">Jumia</P>
                             </div>
                             <div>
-                                <P>Lenovo ThinkPad T480s</P>
+                                <P class="pro-name">Lenovo ThinkPad T480s</P>
                             </div>
                             <div>
                                 <P class="free-s">Free Shipping</P>
                             </div>
                             <div class="star">
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star2.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star2.png" alt=""></img>
                             </div>
                         </div>
                         <div id="sec3-4-div">
                             <div id="main-price-div">
-                                <p class="main_price"># 855,000.00</p>
+                                <p class="main_price sub-price"># 855,000.00</p>
                             </div>
                             <div>
                                 <button id="checkO">Check Out</button>
@@ -163,25 +175,25 @@
                     <div id="sec3-2-div">
                         <div id="sec3-3-div">
                             <div>
-                                <P class="ph-name">Amazon</P>
+                                <P class="ph-name sub-name">Amazon</P>
                             </div>
                             <div>
-                                <P>Lenovo ThinkPad T480s</P>
+                                <P class="pro-name">Lenovo ThinkPad T480s</P>
                             </div>
                             <div>
                                 <P class="free-s"># 29,555</P>
                             </div>
                             <div class="star">
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star2.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star2.png" alt=""></img>
                             </div>
                         </div>
                         <div id="sec3-4-div">
                             <div id="main-price-div">
-                                <p class="main_price"># 655,000.00</p>
+                                <p class="main_price sub-price"># 655,000.00</p>
                             </div>
                             <div>
                                 <button id="checkO">Check Out</button>
@@ -196,25 +208,25 @@
                     <div id="sec3-2-div">
                         <div id="sec3-3-div">
                             <div>
-                                <P class="ph-name">Aliexpress</P>
+                                <P class="ph-name sub-name">Aliexpress</P>
                             </div>
                             <div>
-                                <P>Lenovo ThinkPad T480s</P>
+                                <P class="pro-name">Lenovo ThinkPad T480s</P>
                             </div>
                             <div>
                                 <P class="free-s">Use Coupons</P>
                             </div>
                             <div class="star">
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star.png" alt=""></img>
-                                <img class="img-1" src="./product-img/star2.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star.png" alt=""></img>
+                                <img class="img-1 star-mo" src="./product-img/star2.png" alt=""></img>
                             </div>
                         </div>
                         <div id="sec3-4-div">
                             <div id="main-price-div">
-                                <p class="main_price"># 755,000.00</p>
+                                <p class="main_price sub-price"># 755,000.00</p>
                             </div>
                             <div>
                                 <button id="checkO">Check Out</button>
@@ -347,5 +359,6 @@
         <div class="copyright"><p>Copyright 2022: Zuri Team 23</p></div>
     </footer>
 
+    <script src="./product-details.js"></script>
 </body>
 </html>
