--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
         
-
     <main id="container">
 
         <div id="profile1">
@@ -20,8 +19,10 @@
 
             <h2>My Profile</h2>
 
-            <img src="Component 2.png" alt="" id="prof-img">
-
+            <img src="Component 2 (1).png" alt="" id="prof-img">
+            <div class="btn">
+            <button>Change Profile Picture</button>
+            </div>
             <div id="logo">
                 <img src="notification.png" alt="" id="bell">
                 <img src="profile-circle.png" alt="" id="user">
@@ -29,6 +30,7 @@
 
         </div>
 
+        
 
         <div id="profile2">
 
