--- a/Product-details/product-details.html
+++ b/Product-details/product-details.html
@@ -7,6 +7,8 @@
     <title>Product Details</title>
     <link rel="stylesheet" href="product-details.css">
     <link rel="shortcut icon" href="./product-img/favicon.svg" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5929357117806714"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="main-header">
