--- a/password-form/password-form.html
+++ b/password-form/password-form.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./password-form.css">
     <link rel="shortcut icon" href="./image/favicon.svg" type="image/x-icon">
     <title>Password reset form</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5929357117806714"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
