--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,8 @@
     <title>Frequently Asked Questions · ShopMore</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5929357117806714"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="main-header">
