--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,19 @@
             </div>
         </nav>
     </header>
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5929357117806714"
+     crossorigin="anonymous"></script>
+<!-- v_ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5929357117806714"
+     data-ad-slot="1175921382"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     <main id="contact-container">
       <div class="contact-row">
@@ -133,5 +146,18 @@
     </div>
     <div class="copyright"><p>Copyright 2022: Zuri Team 23</p></div>
 </footer>
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5929357117806714"
+     crossorigin="anonymous"></script>
+<!-- v_ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5929357117806714"
+     data-ad-slot="1175921382"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
